--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,26 +1,74 @@
-*{
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
+* {
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
 }
-.text-primary{
+.text-primary {
+  color: #fd6e0a;
+}
+.btn-primary {
+  background-color: #fd6e0a;
+  border: none;
+  border-radius: 5px;
+  color: var(--White-Color, #fff);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  padding: 18px 35px;
+}
+/* header styles */
+.header{
+    background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
+}
+ /* nav bar styles  */
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 150px;
+  padding-top: 50px;
+}
+.nav-title {
+  font-weight: 800;
+  font-size: 45px;
+}
+nav ul li {
+  list-style: none;
+  display: inline;
+  margin-left: 30px;
+  color: var(--Dark-02, #474747);
+  font-size: 20px;
+  font-weight: 400;
+}
+
+/* banner styles */
+.banner {
+  margin: 0px 50px 0 150px;
+  display: flex;
+  align-items: center;
+}
+.banner-sub-title {
+  color: var(--Dark-02, #474747);
+  font-size: 45px;
+  font-weight: 600;
+}
+.banner-title {
+  color: var(--Dark-01, #181818);
+  font-size: 85px;
+  font-weight: 700;
+}
+.banner-description {
+  color: var(--Dark-03, #757575);
+  font-size: 18px;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+.btn-white{
     color: #FD6E0A;
-}
-.btn-primary{
-    color: #FD6E0A;
-    
-}
-/* header and navigation styles */
-nav{
-    display: flex;
-    justify-content: space-between;
-    margin: 50px 150px;
-}
-.nav-title{
-    font-weight: 800;
-    font-size: 45px;
-}
-nav ul li{
-    list-style: none;
-    display: inline;
-    margin-left: 30px;
+    border-radius: 5px;
+border: 1px solid #FD6E0A;font-size: 20px;
+font-style: normal;
+font-weight: 700;
+padding: 18px 35px;
 }
