--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,3 +116,24 @@ main {
 font-size: 20px;
 font-weight: 700;
 }
+/* what I do styles */
+.what-details-container{
+  display: flex;
+}
+.what-details{
+  border-radius: 5px;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+padding: 35px;
+}
+.icon-name{
+  color: var(--Dark-01, #181818);
+font-size: 20px;
+font-weight: 700;
+margin: 30px 0 20px;
+}
+.icon-details{
+  color: var(--Dark-03, #757575);
+font-size: 16px;
+font-weight: 400;
+line-height: 28px;
+}
