--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,6 +124,7 @@ font-weight: 700;
   border-radius: 5px;
 box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 padding: 35px;
+margin-bottom: 150px;
 }
 .icon-name{
   color: var(--Dark-01, #181818);
@@ -136,4 +137,42 @@ margin: 30px 0 20px;
 font-size: 16px;
 font-weight: 400;
 line-height: 28px;
+}
+/* what i do styles */
+.resume-container{
+  display: flex;
+  gap: 70px;
+}
+.resume-single{
+  padding:30px 35px 30px 0;
+}
+.resume-title{
+  color: var(--Dark-02, #474747);
+font-size: 30px;
+font-weight: 700;
+margin: 70px 0 30px;
+}
+.resume-single-title{
+  color: var(--Dark-02, #474747);
+font-size: 25px;
+font-weight: 700;
+margin-bottom: 10px;
+}
+.resume-sub-title{
+  color: var(--Dark-03, #757575);
+font-size: 20px;
+font-weight: 600;
+margin-bottom: 20px;
+}
+.resume-description{
+  color: var(--Dark-03, #757575);
+font-size: 16px;
+font-weight: 400;
+line-height: 28px;
+margin-right: 30px;
+}
+.resume-border{
+  border: #D1D1D1 solid 1px;
+  border-left: none;
+  border-right: none;
 }
