--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,22 +214,64 @@ margin-right: 30px;
   body{
     text-align: center;
   }
-  nav, .banner, .header, .about-details-container, .what-details-container, .resume-container, .footer{
+  nav, .banner, .header, .about, .about-details-container, .what-details-container, .resume-container, .footer{
     display: flex;
     flex-direction: column;
+    gap: 20px;
+    padding: 0 ;
+  }
+  .about, .what-i-do, .resume-container, .footer{
+    padding: 0 20px;
+  }
+  nav ul{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-left: -70px;
+  }
+  .btn-white{
+    padding: 18px 45px;
+    margin-top: 20px;
   }
   .banner img{
-    display: none;
+    width: 270px;
+    height: 400px;
+    margin-right: 0;
   }
-  .footer{
-    padding: 0;
+  .about{
+    padding:20px 0 20px 50px;
   }
+  .about .section-description{
+    margin-right: 30px;
+  }
+  .section-description{
+    text-align: center;
+  }
+  .about-details-container {
+    margin-right: 35px;
+}
+.resume-single{
+  padding: 20px 0;
+  margin-left: 30px;
+}
+  .footer input[type="text"], input[type="email"], textarea {
+    padding: 0px;
+}
 }
 @media screen and (min-width:577px)and (max-width: 992px){
   .banner, .what-details-container{
     display: flex;
     flex-direction: column;
   }
+  .resume-container{
+    padding-left: 50px;
+  }
+  .footer-icons{
+    display: flex;
+  }
+  .footer input[type="text"], input[type="email"], textarea {
+    padding: 0px;
+}
 }
 .hide{
   display: none;
